Beluga Player 0.7

* Add support for QuickMix edition
* Fix ProxyDNS IP blacklisting
* Improve stream buffering
* Fix new accounts bug
* Update Tunlr IP addresses
* Add Debian package

Beluga Player 0.6

* GUI now uses Apache Pivot
* Built-in MP3 player based on JLayer
* Playback use MP3 format instead of AAC
* Better cache support
* Improved DNS Proxy support
* Add LastFM support
* Global responsiveness improvement