@@ -37,7 +37,7 @@ public class Main
 		if (version == null)
 			version = "(dev)";
 
-		System.out.println("Beluga BelugaMP3Player " + version);
+		System.out.println("Beluga Player " + version);
 		if (args.length == 1 && args[0].equals("-version"))
 			System.exit(0);
 
