@@ -2,7 +2,8 @@
 	xmlns:local="info.bonjean.beluga.gui.pivot" xmlns="org.apache.pivot.wtk" xmlns:content="org.apache.pivot.wtk.content">
 	<columns>
 		<TablePane.Column width="1*" />
-		<TablePane.Column width="50" />
+		<TablePane.Column width="40" />
+		<TablePane.Column width="40" />
 		<TablePane.Column width="35" />
 	</columns>
 
@@ -30,6 +31,14 @@
 				<TablePane.Filler />
 			</TablePane.Row>
 		</TablePane>
+			<LinkButton bxml:id="pauseButton" action="pauseSong" tooltipText="Pause this song">
+				<dataRenderer>
+					<content:ButtonDataRenderer orientation="vertical" iconWidth="30" iconHeight="30" fillIcon="true" />
+				</dataRenderer>
+				<buttonData>
+					<content:ButtonData icon="/img/pause.svg" />
+				</buttonData>
+			</LinkButton>
 		<LinkButton bxml:id="nextButton" action="nextSong" tooltipText="Skip this song">
 			<dataRenderer>
 				<content:ButtonDataRenderer orientation="vertical" iconWidth="30" iconHeight="30" fillIcon="true" />
